tests/baselines/reference/reassignStaticProp.errors.txt
==== tests/cases/compiler/reassignStaticProp.ts (1 errors) ====
    class foo {
     
        static bar = 1;
     
        static bar:string; // errror - duplicate id
               ~~~
!!! reassignStaticProp.ts(5,12): error TS2000: Duplicate identifier 'bar'. Additional locations:
!!! 	reassignStaticProp.ts(3,5)
     
    }
     
     
    
    